kubernetes-manifests/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels:
    name: app-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app-dev
  name: simple-app
  labels:
    app: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: ghcr.io/crcasiswho/demostration-application-enviroments:latest
        ports:
        - containerPort: 3090
---
apiVersion: v1
kind: Service
metadata:
  namespace: app-dev
  name: simple-app
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3090
