kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  namespace: app
  annotations:
   kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.cricapartners.es
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nodejs
              port:
                number: 80
  ingressClassName: nginx
